<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteClear"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/whiteClear"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/avatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="3dp"
                        android:paddingStart="16dp"
                        app:civ_border_color="#90909090"
                        app:civ_border_width="1dp"
                        tools:ignore="RtlSymmetry"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/avatar"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/status_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/statusauthor"
                            android:textSize="16sp"
                            android:textStyle="normal|bold"/>


                        <TextView
                            android:id="@+id/timestamp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/timestamp"
                            android:textSize="12sp"
                            android:textStyle="normal|italic"/>
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              android:id="@+id/mainContentLayout"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:background="@color/whiteClear"
                              android:orientation="vertical">

                    <TextView
                        android:id="@+id/contentWarningText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/nothing"
                        android:textSize="16sp"
                        android:visibility="visible"/>

                    <Button
                        android:id="@+id/showContentWarning"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/show_content"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textSize="0sp"/>


                    <LinearLayout
                        android:id="@+id/masterImageContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"

                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:id="@+id/imageContainerFirst"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/firstImage"
                                android:layout_width="wrap_content"
                                android:layout_height="85dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_weight="1"
                                android:scaleType="centerCrop"
                                android:visibility="gone"
                                app:riv_border_color="#90909090"
                                app:riv_border_width="2dp"
                                app:riv_corner_radius="5dp"/>

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/secondImage"
                                android:layout_width="wrap_content"
                                android:layout_height="85dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_weight="1"
                                android:scaleType="centerCrop"
                                android:visibility="gone"
                                app:riv_border_color="#90909090"
                                app:riv_border_width="2dp"
                                app:riv_corner_radius="5dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/imageContainerSecond"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/thirdImage"
                                android:layout_width="wrap_content"
                                android:layout_height="85dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_weight="1"
                                android:scaleType="centerCrop"
                                android:visibility="gone"
                                app:riv_border_color="#90909090"
                                app:riv_border_width="2dp"
                                app:riv_corner_radius="5dp"/>

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:id="@+id/fourthImage"
                                android:layout_width="wrap_content"
                                android:layout_height="85dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_weight="1"
                                android:scaleType="centerCrop"
                                android:visibility="gone"
                                app:riv_border_color="#90909090"
                                app:riv_border_width="2dp"
                                app:riv_corner_radius="5dp"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/boost_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/nothing"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        android:textStyle="normal|italic"
                        android:visibility="visible"/>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/statusHoverTop"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reply"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_reply_black_24dp"/>

                <ImageButton
                    android:id="@+id/star"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_stars_black_24dp"/>

                <ImageButton
                    android:id="@+id/boost"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_autorenew_black_24dp"/>

                <Space
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/more"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_more_horiz_black_24dp"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
